--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mine koder</title>
    
 </head>
 <body style="background-color: rgb(201, 199, 197)">
     <h1>Mine prosjekter</h1>
-    <a href="prosjekt_1.html"> Her kommer det </a>
+    <a href="HBS_index.html"> Her kommer det </a>
 </body>
 </html>
