--- a/Steg_3.html
+++ b/Steg_3.html
@@ -21,7 +21,7 @@
     <div class="tekst_oppsett">
 
         <div class="navbar">
-            <a href="Index.html">Hjem</a>
+            <a href="HBS_index.html">Hjem</a>
             <a href="Steg_1.html">Steg 1</a>
             <a href="Steg_2.html">Steg 2</a>
             <a class="active" href="Steg_3.html">Steg 3</a>
