--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body style="background-color: rgb(201, 199, 197)">
     <h1>Mine prosjekter</h1>
-    <a href="HBS_index.html"> Her kommer det </a>
+    <a href="HBS_index.html">Hvordan bli svær</a>
 </body>
 </html>
