--- a/HBS_index.html
+++ b/HBS_index.html
@@ -31,7 +31,7 @@
         <p>Det er mange ting som skal til, trykk her for å se hvordan bli stor og sterk</p>
     </div> 
 
-    <a href="Steg_1.html"><img src="/HBS.Hjemside.jpg" alt="Bilde Stor Kompis" class="center"; height="600px"></a>
+    <a href="Steg_1.html"><img src="HBS.Hjemside.jpg" alt="Bilde Stor Kompis" class="center"; height="600px"></a>
    
    
 </body>
