--- a/Steg_1.html
+++ b/Steg_1.html
@@ -31,7 +31,7 @@
         <p>Spis mer mat enn du tror, pass på å få i den nok næringsrik mat</p>
     </div>
 
-    <a href="Steg_2.html"><img src="./Bilder/DMS.Steg1.jpg" alt="Bilde Gutt Spiser" class="center"; height="600px"></a>
+    <a href="Steg_2.html"><img src="./DMS.Steg1.jpg" alt="Bilde Gutt Spiser" class="center"; height="600px"></a>
     
 </body>
 </html>
