--- a/Steg_2.html
+++ b/Steg_2.html
@@ -31,7 +31,7 @@
         <p>Ta pushups på skolen og tren nesten hver dag helst</p>
     </div> 
 
-    <a href="Steg_3.html"><img src="./Bilder/GST.Steg2.jpg" alt="Bilde Kompis trener" class="center"; height="600px"></a>
+    <a href="Steg_3.html"><img src="./GST.Steg2.jpg" alt="Bilde Kompis trener" class="center"; height="600px"></a>
    
    
 </body>
