--- a/Steg_3.html
+++ b/Steg_3.html
@@ -31,7 +31,7 @@
         <p>Å bli stor og sterk skjer ikke med en gang, kos deg på veien og en dag kan dette være deg</p>
     </div> 
 
-    <a href="https://youtu.be/ktVjScrKWI8"><img src="./Bilder/SSG.jpg" alt="Bilde Muskelbunten" class="center"; height="600px"></a>
+    <a href="https://youtu.be/ktVjScrKWI8"><img src="./SSG.jpg" alt="Bilde Muskelbunten" class="center"; height="600px"></a>
    
    
 </body>
