--- a/Hvordan Bli Svær/Steg_1.html
+++ b/Hvordan Bli Svær/Steg_1.html
@@ -21,7 +21,7 @@
     <div class="tekst_oppsett">
 
         <div class="navbar">
-            <a href="Index.html">Hjem</a>
+            <a href="HBS_index.html">Hjem</a>
             <a class="active" href="Steg_1.html">Steg 1</a>
             <a href="Steg_2.html">Steg 2</a>
             <a href="Steg_3.html">Steg 3</a>
@@ -31,7 +31,7 @@
         <p>Spis mer mat enn du tror, pass på å få i den nok næringsrik mat</p>
     </div>
 
-    <a href="Steg_2.html"><img src="./Bilder/DMS.Steg1.jpg" alt="Bilde Gutt Spiser" class="center"; height="600px"></a>
+    <a href="Steg_2.html"><img src="./DMS.Steg1.jpg" alt="Bilde Gutt Spiser" class="center"; height="600px"></a>
     
 </body>
 </html>
