--- a/Hvordan Bli Svær/Steg_2.html
+++ b/Hvordan Bli Svær/Steg_2.html
@@ -21,7 +21,7 @@
     <div class="tekst_oppsett">
 
         <div class="navbar">
-            <a href="Index.html">Hjem</a>
+            <a href="HBS_index.html">Hjem</a>
             <a href="Steg_1.html">Steg 1</a>
             <a class="active" href="Steg_2.html">Steg 2</a>
             <a href="Steg_3.html">Steg 3</a>
@@ -31,7 +31,7 @@
         <p>Ta pushups på skolen og tren nesten hver dag helst</p>
     </div> 
 
-    <a href="Steg_3.html"><img src="./Bilder/GST.Steg2.jpg" alt="Bilde Kompis trener" class="center"; height="600px"></a>
+    <a href="Steg_3.html"><img src="./GST.Steg2.jpg" alt="Bilde Kompis trener" class="center"; height="600px"></a>
    
    
 </body>
