--- a/Hvordan Bli Svær/Steg_3.html
+++ b/Hvordan Bli Svær/Steg_3.html
@@ -21,7 +21,7 @@
     <div class="tekst_oppsett">
 
         <div class="navbar">
-            <a href="Index.html">Hjem</a>
+            <a href="HBS_index.html">Hjem</a>
             <a href="Steg_1.html">Steg 1</a>
             <a href="Steg_2.html">Steg 2</a>
             <a class="active" href="Steg_3.html">Steg 3</a>
@@ -31,7 +31,7 @@
         <p>Å bli stor og sterk skjer ikke med en gang, kos deg på veien og en dag kan dette være deg</p>
     </div> 
 
-    <a href="https://youtu.be/ktVjScrKWI8"><img src="./Bilder/SSG.jpg" alt="Bilde Muskelbunten" class="center"; height="600px"></a>
+    <a href="https://youtu.be/ktVjScrKWI8"><img src="./SSG.jpg" alt="Bilde Muskelbunten" class="center"; height="600px"></a>
    
    
 </body>
