--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mine codes</title>
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./Forside/favicon.ico">
 
     <style>
         html, body {
@@ -24,8 +24,8 @@
     <div class="tekst_oppsett">
         <h1>Mine prosjekter</h1>
         liste her
-        <a href="HBS_index.html">Hvordan Bli Svær</a>
-        <a href="Timepla_A.html">Min Timeplan</a>
+        <a href="./Hvordan_Bli_Svær/HBS_index.html">Hvordan Bli Svær</a>
+        <a href="./Min_Timeplan/Timepla_A.html">Min Timeplan</a>
     </div>
 </body>
 
