--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <div class="tekst_oppsett">
         <h1>Mine prosjekter</h1>
         liste her
-        <a href="./Hvordan_Bli_Svær/HBS_index.html">Hvordan Bli Svær</a>
-        <a href="./Min_Timeplan/Timepla_A.html">Min Timeplan</a>
+        <a href="./Hvordan Bli Svær/HBS_index.html">Hvordan Bli Svær</a>
+        <a href="./Min Timeplan/Timepla_A.html">Min Timeplan</a>
     </div>
 </body>
 
