--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <h1>Mine prosjekter</h1>
         liste her
         <a href="./Hvordan Bli Svær/HBS_index.html">Hvordan Bli Svær</a>
-        <a href="./Min Timeplan/Timepla_A.html">Min Timeplan</a>
+        <a href="./Min Timeplan/Timeplan_A.html">Min Timeplan</a>
     </div>
 </body>
 
 <style>
     .bakgrunn {
-        background-image: url(./forsidebilde.png);
+        background-image: url(./forside/forsidebilde.png);
         height: 100%;
         background-position: center;
         background-repeat: no-repeat;
