--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <style>
     .bakgrunn {
-        background-image: url(./forside/forsidebilde.png);
+        background-image: url(./Forside/forsidebilde.png);
         height: 100%;
         background-position: center;
         background-repeat: no-repeat;
