--- a/CSS Lekeplass/lekeplass.html
+++ b/CSS Lekeplass/lekeplass.html
@@ -27,7 +27,7 @@
     <h3> Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse nec felis
       sed lorem tincidunt. </h3>
 
-    <img src="./Bilder/Lekeplass_1.jpg" width="700" alt="Barn henger i klatrestativ på lekeplass.">
+    <img src="./Lekeplass_1.jpg" width="700" alt="Barn henger i klatrestativ på lekeplass.">
 
     <p class="sitat">
       – Etiam arcu dolor, porta non tristique sit amet, facilisis ut sem. Integer.
@@ -47,7 +47,7 @@
       et malesuada fames ac ante ipsum primis in.
     </p>
 
-    <img src="./Bilder/Lekeplass_2.jpg" width="700" alt="Barn klatrer på lekeplass om vinteren.">
+    <img src="./Lekeplass_2.jpg" width="700" alt="Barn klatrer på lekeplass om vinteren.">
 
     <h2>Aliquam faucibus</h2>
     <p>
