--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <tr>
                     <td>
                         <a href="./Hvordan Bli Svær/HBS_index.html">Hvordan Bli Svær</a>
-                        <a href="./Min Timeplan/Timepla_A.html">Min Timeplan</a>
+                        <a href="./Min Timeplan/Timeplan_A.html">Min Timeplan</a>
                         <a href="./CSS Lekeplass/lekeplass.html">CSS Lekeplass</a>
                     </td>
                 </tr>
@@ -50,7 +50,7 @@
 
 <style>
     .bakgrunn {
-        background-image: url(./forsidebilde.png);
+        background-image: url(./Forside/forsidebilde.png);
         height: 80%;
         background-position: center;
         background-repeat: no-repeat;
