--- a/Min Timeplan/2.0_Timeplan_index.html
+++ b/Min Timeplan/2.0_Timeplan_index.html
@@ -61,7 +61,7 @@
         <a href="Timeplan_Odd.html">Klikk her for å komme til oppgaven</a>
     </div>
 
-    <a id="tilindex" href="index.html">Tilbake til Indexen</a>
+    <a id="tilindex" href="./index.html">Tilbake til Indexen</a>
 
 </body>
 
