--- a/Min Timeplan/Timeplan_Odd.html
+++ b/Min Timeplan/Timeplan_Odd.html
@@ -99,7 +99,7 @@
                     <a href="IT.html">13:30 IT</a>
                 </td>
                 <td>
-                    <a href="Fysikk.html">13:45 Historie</a>
+                    <a href="Historie.html">13:45 Historie</a>
                 </td>
             </tr>
 
