--- a/Javascript Practice/teams_oppg.html
+++ b/Javascript Practice/teams_oppg.html
@@ -46,6 +46,7 @@
         }
 
         function lilleGangetabell() {
+            console.clear();
             for (let x = 1; x <= 10; x++) {
                 for (let y = 1; y <= 10; y++) {
                     t = y
