--- a/Javascript Practice/js_practice_index.html
+++ b/Javascript Practice/js_practice_index.html
@@ -45,7 +45,7 @@
     <br>
     <a href="./oppg.ark.html">Oppg. ark med Aleks</a>
     <br>
-    <a href="./array.m.helge.html">Array oppg. med Helge</a>
+    <a href="./arrray.m.helge.html">Array oppg. med Helge</a>
 </div>
    
 </body>
