--- a/Oppgaver/frekvensanalyse.html
+++ b/Oppgaver/frekvensanalyse.html
@@ -93,7 +93,7 @@
                 axisY2: {
                     interlacedColor: "rgba(1,77,101,.2)",
                     gridColor: "rgba(1,77,101,.1)",
-                    title: "Søylediagram"
+                    title: "Frekvens"
                 },
                 data: [{
                     type: "bar",
